# bulldog

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  harness.txt  rust-project.json
,config/: config.toml
bulldog-syscall/: Cargo.toml
bulldog-syscall/src/: errno.rs  lib.rs  raw.rs  wrapper.rs
docs/: apic.md  dispatcher.md  privilege-switching.md  syscall-harness-guide.md  syscall-table.md  syscall.md  vfs.md
docs/architecture/: README.md  apic,md  boot.md  gdt.md  interrupts.md  kernel_init.md  layout.md  linker.md  memory.md  processes.md  smp.md  stack.md  time.md  timer.md
kernel/: Cargo.toml  layout.ld
kernel/src/: allocator.rs  apic.rs  color.rs  font.rs  framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  macros.rs  main.rs  memory.rs  serial.rs  stack.rs  syscall.rs  time.rs  user_mode.rs  user_sys.rs  writer.rs
kernel/src/allocator/: fixed_size_block.rs  linked_list.rs
kernel/src/elf/: loader.rs  mod.rs  types.rs
kernel/src/syscall/: alloc.rs  close.rs  dispatcher.rs  errno.rs  exit.rs  fd.rs  filelike.rs  free.rs  mod.rs  open.rs  read.rs  stubs.rs  table.rs  write.rs
kernel/src/task/: keyboard.rs
kernel/src/tests/: mod.rs  syscall_harness.rs
kernel/src/vfs/: adapter.rs  file.rs  init.rs  memfile.rs  mod.rs  mount.rs  node.rs  ops.rs  resolve.rs
scripts/: dev.sh  run.sh
src/: main.rs
user/hello/: Cargo.toml
user/hello/src/: main.rs
