
[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.12"
x86_64 = "0.14.0"
font8x8 = { version = "0.2.5", default-features = false, features = ["unicode"] }
volatile = { version = "0.4.6", features = ["unstable"] }
spin = "0.9.0"
rlibc = "1.0.0"
linked_list_allocator = "0.8.0"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.1"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[package.metadata.bootloader_api]
map-physical-memory = true

[package.metadata.bootloader]
linker-script = "layout.ld"


