
[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
path = "src/main.rs"         # ✅ Explicit path to your entrypoint
test = false
bench = false

[dependencies]
bootloader_api = "0.11.12"
x86_64 = "0.14.0"
volatile = { version = "0.4.6", features = ["unstable"] }
spin = "0.9.0"
rlibc = "1.0.0"
linked_list_allocator = "0.8.0"
pc-keyboard = "0.5.0"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
crossbeam-queue = { version = "0.2.1", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.2.1", default-features = false }
futures-util = { version = "0.3.4", default-features = false, features = ["alloc"] }
noto-sans-mono-bitmap = "0.3.1"
log = "0.4"
heapless = "0.7"


[lib]
path = "src/lib.rs"

[package.metadata.bootloader_api]
map-physical-memory = true   # ✅ Required for dynamic memory mapping

[package.metadata.bootloader]
linker-script = "layout.ld"  # ✅ Ensures bootloader uses your custom linker

[features]
default = []
syscall_tests = []
serial_log = []

